--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-flow: column wrap;
   justify-content: center;
+  margin: auto;
   height: 92vh;
   width: 60vw; 
   gap: 20px 10px;
