--- a/style.css
+++ b/style.css
@@ -1,18 +1,28 @@
 cells {
   background-color: #000;
   display: flex;
-  /* flex-flow: column wrap; */
-  /* justify-content: center;
+  /* flex: 1; */
+  width: 70vw;
+  height: 0.15vw;
+  justify-content: center;
   margin: auto;
-  gap: 20px 10px; */
-  /* grid-template-columns: 10vh 10vh; */
-  width: 10vw;
-  height: 10vw;
-  gap: 10px;
-  /* box-sizing: border-box; */
+  /* gap: 10px; */
 }
 
-.title h1 {
+/* box-sizing: border-box; */
+/* flex-flow: column wrap; */
+/* justify-content: center;
+  margin: auto;
+  gap: 20px 10px; */
+/* grid-template-columns: 10vh 10vh; */
+
+.title {
   display: flex;
   justify-content: center;
+}
+
+button {
+  display: flex;
+  /* gap: 10px; */
+  margin: auto;
 }
