--- a/style.css
+++ b/style.css
@@ -1,17 +1,24 @@
 cells {
-  background-color: #000;
+  background-color: #fff;
   display: flex;
-  /* flex: 1; */
   width: 70vw;
   height: 0.15vw;
   justify-content: center;
+  border: gray 20px;
   margin: auto;
-  /* gap: 10px; */
+}
+
+body {
+  background-color: rgb(155, 224, 224);
+}
+
+whiteHover {
+  background-color: #fff;
 }
 
 /* box-sizing: border-box; */
 /* flex-flow: column wrap; */
-/* justify-content: center;
+/*
   margin: auto;
   gap: 20px 10px; */
 /* grid-template-columns: 10vh 10vh; */
