--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 cells {
   background-color: #fff;
   display: flex;
+  flex: 1;
   width: 70vw;
   height: 0.15vw;
   justify-content: center;
@@ -15,13 +16,6 @@ inputButton {
 body {
   background-color: rgb(155, 224, 224);
 }
-
-/* box-sizing: border-box; */
-/* flex-flow: column wrap; */
-/*
-  margin: auto;
-  gap: 20px 10px; */
-/* grid-template-columns: 10vh 10vh; */
 
 .title {
   display: flex;
