--- a/style.css
+++ b/style.css
@@ -7,12 +7,12 @@ gridsContainer {
     background: linear-gradient(rgba(96, 79, 252, 0.082), white);
 }
 
-cells {
+.board {
   /* background-color: #fff; */
   /* display: flex; */
   display: grid;
-  height: 20px;
-  width: 400px;
+  height: 70vh;
+  width: 80vw;
 
   /* Insert a gray box shadow  */
 
