Remove white & black buttons, add padding

--- a/style.css
+++ b/style.css
@@ -47,3 +47,11 @@ button {
   border: 1px solid black;
   cursor: pointer;
 }
+
+.buttons {
+  padding: 20px;
+}
+
+.inputButton {
+  padding: 20px 20px;
+}
