--- a/style.css
+++ b/style.css
@@ -1,31 +1,24 @@
 gridsContainer {
-  height: 100vh;
-  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: linear-gradient(rgba(96, 79, 252, 0.082), white);
 }
 
 .board {
-  /* background-color: #fff; */
-  /* display: flex; */
   display: grid;
-  height: 70vh;
-  width: 80vw;
+  height: 75vh;
+  width: 60vw;
 
   /* Insert a gray box shadow  */
 
   box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
     0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
-  /* flex: 1; */
-  /* width: 70vw;
-  height: 0.15vw; */
   margin: auto;
 }
 
-inputButton {
-  margin-bottom: 2vh;
+.upper {
+  flex-direction: column;
+  padding: 10px;
 }
 
 body {
@@ -39,7 +32,6 @@ body {
 
 button {
   display: flex;
-  /* gap: 10px; */
   margin: auto;
   background: rgb(236, 222, 240);
   border-radius: 100px;
